<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlCardnumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            >
            <TextView
                android:id="@+id/tvLableCardNumer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number"
                android:textSize="12dp"
                android:textColor="@color/color_black"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/etCardNumber"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:hint="@string/valid_card_number"
                android:textColorHint="@color/color_black"
                android:textSize="10dp"
                android:layout_below="@id/tvLableCardNumer"
                android:background="@drawable/shape_edittext_credit"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:layout_margin="5dp"/>
        </RelativeLayout>


<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:layout_gravity="center_vertical">

        <RelativeLayout
            android:id="@+id/rlDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            >

            <TextView
                android:id="@+id/tvLableDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiration_date"
                android:textSize="12dp"
                android:textColor="@color/color_black"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"/>
            <EditText
                android:id="@+id/etMonth"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:hint="@string/mm"
                android:textColorHint="@color/color_black"
                android:textSize="10dp"
                android:layout_below="@id/tvLableDate"
                android:background="@drawable/shape_edittext_credit"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:layout_margin="5dp"/>
            <EditText
                android:id="@+id/etYear"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:hint="@string/yy"
                android:textColorHint="@color/color_black"
                android:textSize="10dp"
                android:layout_below="@id/tvLableDate"
                android:background="@drawable/shape_edittext_credit"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:layout_toRightOf="@id/etMonth"
                android:layout_margin="5dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlCVC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            >

            <TextView
                android:id="@+id/tvLableCVC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cvc_doce"
                android:textSize="12dp"
                android:textColor="@color/color_black"
                android:layout_marginTop="5dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/tvLableCVC"
                >
                <EditText
                    android:id="@+id/etCVC"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:hint="@string/cv"
                    android:textColorHint="@color/color_black"
                    android:textSize="10dp"
                    android:background="@drawable/shape_edittext_credit"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    />
                <ImageView
                    android:id="@+id/ivInfoCVC"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/info"
                    android:padding="2dp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>



        </RelativeLayout>
</RelativeLayout>
        <RelativeLayout
            android:id="@+id/rlCouponCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/tvLableCouponCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coupon_code"
                android:textSize="12dp"
                android:textColor="@color/color_black"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/etCouponCode"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:hint="@string/enter_coupon_code"
                android:textColorHint="@color/color_black"
                android:textSize="10dp"
                android:layout_below="@id/tvLableCouponCode"
                android:background="@drawable/shape_edittext_credit"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:layout_margin="5dp"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>